# UltimateCustomDash

./: CMakeLists.txt  CMakeSettings.json  README.md  about.md  mod.json
resources/CustomNightIcons/Cams and monitors/: Thumbs.db
resources/CustomNightIcons/Cams and monitors/Cameras/: Thumbs.db  plushies.psd
resources/CustomNightIcons/Cams and monitors/Monitor/: Thumbs.db
resources/CustomNightIcons/Cams and monitors/Monitor assets/: Thumbs.db
resources/CustomNightIcons/Items/: Thumbs.db
resources/CustomNightIcons/Jumpscares/: Thumbs.db
resources/CustomNightIcons/Misc/: Thumbs.db
resources/CustomNightIcons/Smoke Cloud/: Thumbs.db
resources/CustomNightIcons/Win and death screens/: Thumbs.db
resources/CustomNightIcons/Win and death screens/Amazing/: Thumbs.db
resources/CustomNightIcons/Win and death screens/Perfect/: Thumbs.db
resources/CustomNightIcons/fonts/: clickteamBig.fnt  clickteamMedium.fnt  clickteamSmall.fnt
resources/CustomNightIcons/sound/: hi.xspf
src/: AnimatronicCell.cpp  AnimatronicCell.h  AnimatronicCellContainer.cpp  AnimatronicCellContainer.h  AstralD.cpp  AstralD.h  AttemptAtReversingDialogObject.h  AudioSource.cpp  AudioSource.h  B.cpp  B.h  BB.cpp  BB.h  CNGameLayer.cpp  CNGameLayer.h  CSKeeper.cpp  CSKeeper.h  DefaultDemonFace.cpp  DefaultDemonFace.h  EVW.cpp  EVW.h  MenuSideBar.cpp  MenuSideBar.h  PowerUpsLayer.cpp  PowerUpsLayer.h  SFSun.cpp  SFSun.h  SHSnowman.cpp  SHSnowman.h  SSKeeper.cpp  SSKeeper.h  SpaceUK.cpp  SpaceUK.h  Spooky.cpp  Spooky.h  aeonair.cpp  aeonair.h  animatronic.h  animatronicBase.cpp  animatronicBase.h  (+93 more)
(+22 files in other folders)
